# ACC-Simulation

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp  makefile
ACC/: ACC.cpp  ACC.h
Car/: Car.cpp  Car.h
Sensor/: LiDAR.cpp  LiDAR.h  Sensor.cpp  Sensor.h
Simulation/: LIDAR_sim.py
Utility/: car_params.json  globals.cpp  globals.h
